maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:14: error: '<-' expected but ')' found.
    for(x-0 to getMondeLargeur()-1){
                                  ^JediEscaper:17: error: illegal start of simple expression
  }
  ^